# is4010-final-abender19

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
filestat/: __init__.py  __main__.py  analyzer.py  cli.py  formatter.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_formatter.py
